add getById endpoint
