# src/routes/post.js
@@ -1,11 +1,12 @@
 import { Router } from 'express'
-import { create, getAll, updateById } from '../controllers/post.js'
+import { create, getAll, updateById, getById } from '../controllers/post.js'
 import { validateAuthentication } from '../middleware/auth.js'
 
 const router = Router()
 
 router.post('/', validateAuthentication, create)
 router.get('/', validateAuthentication, getAll)
+router.get('/:id', validateAuthentication, getById)
 router.patch('/:id', validateAuthentication, updateById)
 
 export default router
